--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:fontFamily="@font/alegreya" />
+        app:fontFamily="sans-serif" />
 
     <TextView
         android:id="@+id/textView4"
